apps/afdiscord-web/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: afdiscord-web
  namespace: haenu
  labels:
    app: afdiscord-web
spec:
  selector:
    matchLabels:
      app: afdiscord-web
  template:
    metadata:
      labels:
        app: afdiscord-web
    spec:
      containers:
      - name: afdiscord-web
        image: hyeonwoo5342/afdiscord-web:1
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        resources:
          limits:
            memory: '200Mi'
            cpu: '50m'
          requests:
            memory: '150Mi'
            cpu: '30m'
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 10
      imagePullSecrets:
      - name: dockerhub-secret
